plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.studyMate'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// TSID
	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.8.3'
	implementation 'com.github.f4b6a3:tsid-creator:5.2.6'

	// P6Spy 의존성 추가
	implementation 'p6spy:p6spy:3.9.1'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Validator
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// BCrypt
	implementation 'org.mindrot:jbcrypt:0.4'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// Test DB h2
	runtimeOnly 'com.h2database:h2'

	// Test
	implementation 'com.google.guava:guava:32.1.3-jre'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Prometheus
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Mailer
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

clean {
	delete file('src/main/generated')
}

bootJar{
	destinationDirectory = file("./target")
	archivesBaseName = 'studyMate'
	archiveFileName = 'studyMate.jar'
	archiveVersion = "0.0.1"
}
